Fix: Updated Starknet wallet connect link to a button for better visibility

--- a/styles/Verify.module.scss
+++ b/styles/Verify.module.scss
@@ -9,6 +9,22 @@
 
   .connect {
     margin-bottom: 10px;
+  
+    border: 1px solid black;
+    border-radius: 0.5rem;         
+    padding: 2rem 2rem;
+    background-color: transparent;    
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  
+    &:hover {
+      background-color: #f3f4f6;
+    }
+  }
+
+  .connect a {
+    font-weight: 600;
+    font-size: 15px;
   }
 
   .sign {
